# billystar

./: .gitignore  Cargo.toml  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
configs/: example.toml
crates/shadowpipe-causal-replay/: Cargo.toml  README.md
crates/shadowpipe-causal-replay/examples/: scenario.example.json
crates/shadowpipe-causal-replay/src/: lib.rs  main.rs
crates/shadowpipe-causal-replay/tests/: cli.rs
crates/shadowpipe-client/: Cargo.toml
crates/shadowpipe-client/src/: main.rs
crates/shadowpipe-core/: Cargo.toml  build.rs
crates/shadowpipe-core/examples/: causal_shadow.rs  phase3_recovery_lab.rs
crates/shadowpipe-core/src/: client_auth.rs  dns_exchange.rs  endpoint.rs  endpoint_dns.rs  endpoint_policy.rs  endpoint_runtime.rs  host_recovery.rs  host_state.rs  http_stream.rs  lib.rs  lockdown.rs  network_events.rs  pacing.rs  platform.rs  policy_state.rs  profile.rs  quic.rs  reality.rs  session.rs  tun_state.rs  volume_guard.rs
crates/shadowpipe-core/src/cam/: h2.rs
crates/shadowpipe-core/src/carrier/: api.rs  mod.rs
crates/shadowpipe-core/src/control/: estimator.rs  mod.rs
crates/shadowpipe-core/src/crypto/: mod.rs
crates/shadowpipe-core/src/measurement/: causal.rs  mod.rs  runtime.rs  stats.rs
crates/shadowpipe-core/src/mux/: mod.rs
crates/shadowpipe-core/src/netguard/: mod.rs
crates/shadowpipe-core/src/packet/: mod.rs
crates/shadowpipe-core/src/proto/: mod.rs
crates/shadowpipe-core/src/routes/: mod.rs
crates/shadowpipe-core/src/ruleset/: binread.rs  catalog.rs  matcher.rs  mod.rs  policy.rs
crates/shadowpipe-core/src/signed_policy/: cbor.rs  cose.rs  error.rs  mod.rs  plan.rs  schema.rs  state.rs  tests.rs  verify.rs
crates/shadowpipe-core/src/split/: dns.rs  dns_guard.rs  dns_packet.rs  ip_cache.rs  leak_guard.rs  mod.rs  preload.rs  routes.rs
crates/shadowpipe-core/src/tls/: mod.rs
crates/shadowpipe-core/src/tun_dev/: mod.rs
crates/shadowpipe-core/src/tunnel/: mod.rs
crates/shadowpipe-core/tests/: e2e_auth.rs  e2e_guard_services.rs  e2e_h2.rs  e2e_http_stream.rs  e2e_matrix.rs  e2e_mux.rs  e2e_profile_shapes.rs  e2e_quic.rs  e2e_reality.rs  e2e_sustained_download.rs  e2e_tls_chrome.rs  e2e_traffic_profiles.rs  e2e_volume_guard.rs
crates/shadowpipe-core/tests/common/: mod.rs  profiles.rs
crates/shadowpipe-core/tests/fixtures/: pqcrypto_mlkem768_legacy_key.json
crates/shadowpipe-policy/: Cargo.toml  README.md
crates/shadowpipe-policy/src/: custody.rs  documents.rs  lib.rs  main.rs  tests.rs
crates/shadowpipe-policy/tests/: cli.rs
crates/shadowpipe-reality/: Cargo.toml  DESIGN-cover-mimicry.md  README.md
crates/shadowpipe-reality/src/: auth.rs  cover.rs  lib.rs  parse.rs  reality.rs  replay.rs  wire.rs
crates/shadowpipe-reality/src/tls13/: asio.rs  client.rs  kdf.rs  mod.rs  record.rs  schedule.rs  server.rs  stream.rs
crates/shadowpipe-server/: Cargo.toml
crates/shadowpipe-server/src/: main.rs
deploy/: LOCKDOWN-RESTORE.md  install-vps.sh  shadowpipe-client-full-tunnel.service  shadowpipe-client.env.example  shadowpipe-lockdown-restore.service
docs/: architecture-causal-carrier-plane.md  claims-ledger.md  deployment-vdsina-nl-2026-07-17.md  lab-vm-runbook.md  mac-host-isolated-lab.md  phase3-production-safety.md  protocol-comparison-2026-07-16.md  protocol-v3-authentication.md  related-work-matrix-2026.md  security-audit-2026-07-15.md  security-audit-2026-07-16.md  security-audit-2026-07-17.md  threat-model-2026.md  upstream-clean-room-policy.md  upstream-platform-audit-2026-07-16.md
examples/: connect-client.sh
experiments/001-trigger-unit/: README.md  manifest.example.json
experiments/002-whitelist-relay/: README.md  manifest.example.json
experiments/003-rtt-alignment/: README.md  manifest.example.json
experiments/004-shadow-selector/: README.md  input.example.json
experiments/005-blind-tunnel-oracle/: README.md  manifest.example.json
scripts/: cross-build-musl.sh  cross-build-windows-arm64.sh  deploy-linux.sh  test-all.sh  test-cli-flags.sh  test-deploy-render.sh  test-live-services.sh  test-local.sh  test-split-rules.sh
scripts/macos/: cleanup-split.sh  direct-rules.list  ensure-nl-server.sh  ensure-uri.sh  install-pf-anchor.sh  proxy-preload.list  proxy-rules.list  repair-network.sh  residential.env.example  residential.sh  save-dns-state.sh  save-proxy-state.sh  update-rules.sh
tests/host-recovery/: run-orbstack-phase3.sh
tests/host-recovery/results/20260716T124109Z-93828/: FINAL-RESULT.md
tests/host-recovery/results/20260716T225901Z-98821/: FINAL-RESULT.md  PUBLISHED-EVIDENCE.md  RESULT.md  status.env
tests/lockdown/: normalize-built-artifact.py  run-netns-lockdown.sh  run-orbstack-reboot.sh
tests/lockdown/results/20260716T124706Z-34564-reboot/: RESULT.md
tests/lockdown/results/20260717T001923Z-52605-reboot/: PUBLISHED-EVIDENCE.md  RESULT.md  client-restart-stability-wait.env  client-systemd-loop.json  status.env  userspace-systemd-boot.env
tests/netem/: README.md  run.sh  test-runner-safety.sh
tests/portability/: run-orbstack-arm64-current.sh
tests/portability/results/20260716T122834Z-linux-arm64-current/: RESULT.md
tests/portability/results/20260716T180304Z-linux-arm64-current/: RESULT.md  git-head.txt  private-material-scan.env  run-contract.env  source-archive.env  source-files.sha256  source-metrics.env  source.env  status.env
tests/tun/: run-orbstack-full-tun.sh
tests/tun/results/20260716T123535Z-91294-70zWb7/: RESULT.md
tests/tun/results/20260716T173837Z-18283-m8K2po/: PUBLISHED-EVIDENCE.md  RESULT.md  binary-sha256.txt  build-contract.txt  direct-canaries-generation-2-active.env  generation-1-ipv6-drop-counter.env  generation-1-main-wal-active-summary.json  generation-1-network-restart.env  generation-2-ipv6-drop-counter.env  generation-2-main-wal-active-summary.json  icmp.txt  iperf-tcp.json  iperf-udp.json  manager-stop.env  network-handoff-lockdown-active.json  network-handoff-lockdown-census-active.json  network-handoff-timing.env  network-handoff.env  (+6 more)
tests/windows/: native-arm64-h2-gate.ps1  run-parallels-orbstack-h2.sh
(+15 files in other folders)
