[workspace]
resolver = "2"
members = [
    "crates/shadowpipe-causal-replay",
    "crates/shadowpipe-core",
    "crates/shadowpipe-policy",
    "crates/shadowpipe-server",
    "crates/shadowpipe-client",
    "crates/shadowpipe-reality",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"

[workspace.dependencies]
anyhow = "1.0.103"
clap = { version = "4", features = ["derive"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
ml-kem = { version = "=0.3.2", features = ["getrandom", "zeroize"] }
minicbor = { version = "2.2.2", features = ["std"] }
rand = "0.8"
ring = "0.17.14"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tun = { version = "0.7", features = ["async"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = { version = "1.8", features = ["serde"] }
subtle = "2.6"
# QUIC carrier (Hysteria2-class) — only pulled in by the off-by-default `quic`
# feature. quinn's default features give the tokio runtime + rustls(ring); the
# top-level rustls (ring, no aws-lc-rs) lets us build the accept-any client
# verifier and set ALPN, pinned to the same 0.23.x quinn resolves.
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
