[package]
name = "shadowpipe-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bytes = { workspace = true, optional = true }
chacha20poly1305.workspace = true
hkdf.workspace = true
ml-kem.workspace = true
minicbor.workspace = true
rand.workspace = true
ring.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "sync", "rt-multi-thread", "macros"] }
tun.workspace = true
hex.workspace = true
h2 = { workspace = true, optional = true }
http = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
x25519-dalek.workspace = true
zeroize.workspace = true
subtle.workspace = true

# REALITY carrier: a from-scratch TLS 1.3 + REALITY anti-probe front. The REALITY
# TLS handshake is itself the camouflage (with forward-on-fail to a cover site),
# so it stands in for the tls-chrome / h2 carrier on the wire. Always built; the
# carrier is selected at runtime via the client/server `--reality` flag.
shadowpipe-reality = { path = "../shadowpipe-reality" }

# tls-chrome transport (BoringSSL Chrome-JA4 front). Optional so a build can opt
# out, but on by default for compatibility and lab evaluation. Production
# daemon policy requires the REALITY carrier; this carrier is lab-only.
boring = { version = "4", optional = true }
boring-sys = { version = "4", optional = true }
tokio-boring = { version = "4", optional = true }
foreign-types = { version = "0.5", optional = true }
rcgen = { version = "0.13", optional = true }
# Real brotli cert decompression so the client behaves like Chrome under an
# active TLS-MITM probe (a peer that compresses its certificate). Pure Rust, so
# it does not complicate the Linux cross-build.
brotli = { version = "8", optional = true }

# QUIC carrier (Hysteria2-class), off-by-default and lab-only. The PQ
# SecureSession rides inside one QUIC bidirectional stream. Production daemon
# policy requires the REALITY carrier.
quinn = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
geosite-rs = "0.1.6"
ipnet = "2.12.0"
regex = "1.12.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
rand = "0.8"

[features]
default = ["tls-chrome", "http-stream"]
test-util = []
tls-chrome = ["dep:boring", "dep:boring-sys", "dep:tokio-boring", "dep:foreign-types", "dep:rcgen", "dep:brotli"]
# Genuine HTTP/2 request/response streaming. The module is transport-generic;
# the binaries currently place it inside the browser-TLS carrier.
http-stream = ["dep:bytes", "dep:h2", "dep:http"]
# Off-by-default QUIC carrier. rcgen (already optional for tls-chrome) supplies
# the ephemeral self-signed server cert; quinn + rustls do the QUIC/TLS 1.3.
quic = ["dep:quinn", "dep:rustls", "dep:rcgen"]

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
rand = { workspace = true }
