[package]
name = "shadowpipe-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "shadowpipe-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
shadowpipe-core = { path = "../shadowpipe-core", default-features = false }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hex.workspace = true
libc = "0.2"

[features]
default = ["tls-chrome", "http-stream"]
# Chrome-JA4 TLS carrier (BoringSSL). Off for musl static builds.
tls-chrome = ["shadowpipe-core/tls-chrome"]
# Genuine HTTP/2 stream carried inside browser TLS.
http-stream = ["tls-chrome", "shadowpipe-core/http-stream"]
# Off-by-default QUIC carrier (--quic). Forwards to the core `quic` feature
# (pulls quinn/rustls). Build with: cargo build -p shadowpipe-server --features quic
quic = ["shadowpipe-core/quic"]
